# fgms

./: .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  README.cmake  README.md  TODO  autogen.sh  build_docs.bat  build_docs.sh  config.h.msvc  configure.ac  fgls.conf  fgms-dev.conf  gitlog.sh  homedir.cfg  version
contrib/etc/: fgms.service  fgms_local.skel.conf  fgms_production.skel.conf  init_d.fgms-skel  supervisor.fgms.conf
contrib/fgtracker/: client.c  common.h  config.h  create_db.sql  error.c  error.h  fgt_common.h  fgt_config.h  fgt_error.c  server.c  testdb.c  wrappers.c  wrappers.h
contrib/fgtracker/fgtracker-v1/: README.tracker  create_fgt.sql  fgt_error.c  fgt_error.h  server.c  wrappers.c  wrappers.h
contrib/fgtracker/fgtracker-v2/: MIGRATION_instructions.txt  README.txt  dummy_client.php  fgt_connection_mgr.php  fgt_error_report.php  fgt_ident.php  fgt_msg_process.php  fgt_postgres.php  fgt_read_NOWAIT.php  fgt_read_V20151207.php  pg_db.sql  server.php  signal.php
contrib/mpstatus/: config.pl  instructions.txt
contrib/tools/: check_fgms.sh
docs/: 404.html  README.txt  doxy.conf  fgms.css  footer.html  header.html  jquery.lightbox-0.5.css  jquery.lightbox-0.5.js  page_conf.cxx  page_developer.cxx  page_flightgear.cxx  page_install.cpp  page_main.cpp  page_network.cxx  page_project.cxx  page_tracker.cxx
docs/img/: fgms.1.dia
docs/pages/: page_conf.cxx  page_developer.cxx  page_developers.cxx  page_developers_guide.cxx  page_fgms.cxx  page_fgms_next.gen.cxx  page_flightgear.cxx  page_hosting.cxx  page_install.cpp  page_main.cpp  page_network.cxx  page_overview.cxx  page_tracker.cxx
etc/: fgls_skel.conf  fgms_local.skel.conf  fgms_production.skel.conf  fgms_skel.conf
mpstatus/: .htaccess  index.shtml
msvc/: README.msvc  buildme.bat  config.h.msvc  diff-fgms.bat  fgms-diff01.txt  fgms.conf  fgms.dsp  fgms.dsw  fgms.inp  fgms.sln  fgms.vcproj  fgms.vcxproj  fgms.vcxproj.filters  fgms10.sln  libMultiPlayer_a.dsp  libMultiPlayer_a.vcproj  libMultiPlayer_a.vcxproj  libMultiPlayer_a.vcxproj.filters  libfg_server_a.dsp  libfg_server_a.vcproj  libfg_server_a.vcxproj  libfg_server_a.vcxproj.filters  libplib_a.dsp  libplib_a.vcproj  libplib_a.vcxproj  libplib_a.vcxproj.filters  libsgdebug_a.dsp  libsgdebug_a.vcproj  libsgdebug_a.vcxproj  libsgdebug_a.vcxproj.filters  setup.bat  stdint.h  unistd.h  zip-all.bat  zip-exe.bat  zip-src.bat  zip-ver.bat
src/: Makefile.am
src/fg_chat/: Makefile.am  fg_chat.cxx  fg_chat.hxx  main.cxx
src/fglib/: daemon.cxx  daemon.hxx  debug.cxx  debug.hxx  encoding.cxx  encoding.hxx  fg_config.cxx  fg_config.hxx  fg_geometry.cxx  fg_geometry.hxx  fg_list.cxx  fg_list.hxx  fg_log.cxx  fg_log.hxx  fg_proto.hxx  fg_thread.cxx  fg_thread.hxx  fg_util.cxx  fg_util.hxx  fg_version.cxx  fg_version.hxx  ipaddr.cxx  ipaddr.hxx  mpmessages.hxx  netaddr.cxx  netaddr.hxx  netpacket.cxx  netpacket.hxx  netsocket.cxx  netsocket.hxx
src/fgls/: fgls.cxx  fgls.hxx  fgls_cli.cxx  fgls_cli.hxx  relay.cxx  relay.hxx
src/fgms/: fg_cli.cxx  fg_cli.hxx  fg_player.cxx  fg_player.hxx  fg_tracker.cxx  fg_tracker.hxx  fgms.cxx  fgms.hxx  main.cxx
src/flightgear/: Makefile.am
src/flightgear/MultiPlayer/: Makefile.am  mpmessages.hxx  tiny_xdr.cxx  tiny_xdr.hxx
src/libcli/: Makefile  README  cli_client.cxx  cli_client.hxx  cli_line.cxx  cli_line.hxx  clitest.cxx  command.cxx  command.hxx  common.hxx  connection.cxx  connection.hxx  crypt-win.c  debug.cxx  debug.hxx  editor.cxx  editor.hxx  filter.cxx  filter.hxx  generic_commands.cxx  generic_commands.hxx  libcli.cxx  libcli.hxx
src/libmsc/: msc_getopt.cxx  msc_getopt.hxx  msc_unistd.cxx  msc_unistd.hxx
src/plib/: Makefile.am  netSocket.cxx  netSocket.h
src/server/: FILES  Makefile.am  common.h  daemon.cxx  daemon.hxx  fg_cli.cxx  fg_cli.hxx  fg_common.cxx  fg_common.hxx  fg_config.cxx  fg_config.hxx  fg_geometry.cxx  fg_geometry.hxx  fg_list.cxx  fg_list.hxx  fg_player.cxx  fg_player.hxx  fg_server.cxx  fg_server.hxx  fg_tracker.cxx  fg_tracker.hxx  fg_util.cxx  fg_util.hxx  fgms_example.conf  main.cxx  typcnvt.hxx
src/simgear/: Makefile.am  compiler.h
src/simgear/debug/: Makefile.am  debug_types.h  logstream.cxx  logstream.hxx
src/simgear/math/: Makefile.am  SGEuler.cxx  SGEuler.hxx  SGMath.hxx
src/simgear/misc/: Makefile.am  stdint.hxx
src/tests/: keyboard.cpp  test_cli.cxx  test_ipaddr.cxx  test_log.cxx  test_netaddr.cxx
